修复一下奇怪的问题